tests/error/comptime/invalid_result_value2.bz
// error: invalid value of type '[str]' returned from compile time execution
// note: invalid value of type 'str' for element 0 in tuple of type '[str]'
// note: memory range contains objects outside their lifetime in this stack object
// error: expression must be a constant expression
consteval s = {
	let buffer = [10: uint8]();
	[ __builtin_str_from_ptrs(buffer.begin(), buffer.end()) ]
};
